Added starter styles in index.css and added a fetch statement in index.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <title>Colour Generator</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1>Colour Generator</h1>
+    </header>
     <main></main>
     <script src="./index.js" type="module"></script>
   </body>
