Added a default colour value to the color selector input

--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
   <body>
     <div class="colour-generator">
       <header>
-        <input type="color" id="colour-input" name="colour-input" />
+        <input
+          type="color"
+          id="colour-input"
+          name="colour-input"
+          value="#F55A5A"
+        />
         <select id="colour-dropdown" name="colour-dropdown">
           <option value="monochrome">Monochrome</option>
           <option value="monochrome-dark">Monochrome-dark</option>
           <option value="monochrome-light">Monochrome-light</option>
           <option value="analogic">Analogic</option>
           <option value="complement">Complement</option>
-          <option value="analogic-complemment">Analogic-complement</option>
+          <option value="analogic-complement">Analogic-complement</option>
           <option value="triad">Traid</option>
         </select>
         <button id="colour-btn" type="button">Get colour scheme</button>
