--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
         <input
           type="color"
           id="colour-input"
+          class="colour-input"
           name="colour-input"
           value="#F55A5A"
         />
-        <select id="colour-dropdown" name="colour-dropdown">
+        <select
+          class="colour-dropdown"
+          id="colour-dropdown"
+          name="colour-dropdown"
+        >
           <option value="monochrome">Monochrome</option>
           <option value="monochrome-dark">Monochrome-dark</option>
           <option value="monochrome-light">Monochrome-light</option>
@@ -30,7 +35,9 @@
           <option value="analogic-complement">Analogic-complement</option>
           <option value="triad">Traid</option>
         </select>
-        <button id="colour-btn" type="button">Get colour scheme</button>
+        <button id="colour-btn" class="colour-btn" type="button">
+          Get colour scheme
+        </button>
       </header>
       <main>
         <section class="scheme-colours" id="scheme-colours"></section>
